Fixed '/developer' API Endpoint and added Swagger documentation for it
